<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/textView_true_title"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/true_answer"
         android:textColor="@color/deep_sky_blue"
         android:gravity="center"
         android:textSize="18dp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         ></TextView>
        <LinearLayout
            android:layout_below="@id/textView_true_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit"
                android:background="@color/white"
              android:layout_marginLeft="5dp"
                ></Button>
            <Button
                android:id="@+id/button_next_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/next_question"
                android:layout_marginRight="5dp"
                ></Button>
        </LinearLayout>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>