<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/relativeLayout_win_lose_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageView_win"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_win"
            ></ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_win_lose_text"
        android:layout_below="@id/relativeLayout_win_lose_image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/win"
            android:textSize="20dp"
            android:textStyle="bold"
            ></TextView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_question_point_text"
        android:layout_below="@id/relativeLayout_win_lose_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/complete"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/deep_sky_blue"
            ></TextView>

    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@id/relativeLayout_question_point_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"

        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_main_page"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="15dp"
            >
            <Button
                android:id="@+id/button_main_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:background="@color/sky_blue"
                android:text="@string/home"
                ></Button>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_exit"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="15dp"
            android:layout_below="@id/cardView_main_page"
            >
            <Button
                android:id="@+id/button_exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:background="@color/light_pink"
                android:text="@string/exit"
                ></Button>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>




</RelativeLayout>